--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.class
 *.log
 
+activator*
+
 # sbt specific
 .cache/
 .history/
@@ -15,3 +17,6 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+
+# emacs 
+*~
