basic auth works

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,7 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-application.secret="PV[[KXUH@F0U<qP:_<_Dxb@DaObZwSZWQCBeJcYKDg;1oG6`;eATkw_5`ICKul;K"
+application.secret="OCUF3nA85EEf=N15Lduib]t_=rJp`Hw[6O]8fmgfWeql2gI]uVI/<^??1anrm?K7"
 
 # The application languages
 # ~~~~~
@@ -60,3 +60,4 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+include "silhouette.conf"
