--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -8,5 +8,13 @@ silhouette {
   authenticator.cookieIdleTimeout=1800
   authenticator.cookieAbsoluteTimeout=43200
   authenticator.authenticatorExpiry=43200
+  
+  # Google provider for localhost app
+  google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
+  google.accessTokenURL="https://accounts.google.com/o/oauth2/token"
+  google.redirectURL="http://localhost:9000/authenticate/google"
+  google.clientID="29819321152-22fi96qabajjssep6he9ug71eghu9130.apps.googleusercontent.com"
+  google.clientSecret="ZbWpm9eklhDhmp5Rwb2tEAqX"
+  google.scope="profile email"
 
 }
