added ladders table

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,4 +59,7 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# admin user
+admin.email = "jonathan.zernik@elementum.com"
+
 include "silhouette.conf"
