--- a/server/conf/silhouette.conf
+++ b/server/conf/silhouette.conf
@@ -1,13 +1,18 @@
 silhouette {
 
   # Authenticator settings
-  authenticator.cookieName="id"
-  authenticator.cookiePath="/"
-  authenticator.secureCookie=false
-  authenticator.httpOnlyCookie=true
-  authenticator.cookieIdleTimeout=1800
-  authenticator.cookieAbsoluteTimeout=43200
+  authenticator.sessionKey="authenticator"
+  authenticator.encryptAuthenticator=true
+  authenticator.useFingerprinting=true
+  authenticator.authenticatorIdleTimeout=1800
   authenticator.authenticatorExpiry=43200
+  
+  # OAuth2 state provider settings
+  oauth2StateProvider.cookieName="OAuth2State"
+  oauth2StateProvider.cookiePath="/"
+  oauth2StateProvider.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
+  oauth2StateProvider.httpOnlyCookie=true
+  oauth2StateProvider.expirationTime=300
   
   # Google provider for localhost app
   google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
